# enpm663_spring2023

./: README.md
bash_functions/: bash_functions.sh
competitor_interfaces/: CMakeLists.txt  package.xml
competitor_interfaces/msg/: RobotsStatus.msg
lecture3/first_package/: CMakeLists.txt  package.xml
lecture3/first_package/first_package/: first_package.py
lecture3/first_package/include/first_package/: publisher_cpp.hpp  subscriber_cpp.hpp
lecture3/first_package/launch/: first.launch.py
lecture3/first_package/nodes/: publisher_py.py  subscriber_py.py
lecture3/first_package/src/: publisher_cpp.cpp  subscriber_cpp.cpp
lecture3/first_package_cpp/: CMakeLists.txt  package.xml
lecture3/first_package_cpp/include/first_package_cpp/: first_node_cpp.hpp  subscriber_cpp.hpp
lecture3/first_package_cpp/src/: first_node_cpp.cpp
lecture3/first_package_py/: package.xml  setup.py
lecture3/first_package_py/first_package_py/: first_node_py.py  publisher_py.py  second_node_py.py  subscriber_py.py
lecture6/: CMakeLists.txt  package.xml
lecture6/doc/: aliases.txt
lecture7/: CMakeLists.txt  package.xml
lecture7/include/lecture7/: floor_robot.hpp
lecture7/launch/: l6.launch.py  l7.launch.py  reference_frames.launch.py
lecture7/lecture7/: competition_interface.py
lecture7/nodes/: main.py
lecture7/src/: floor_robot.cpp
